[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unicef-realm"
dynamic = ["version"]
description = "Provides Business Area and User Role permission management"
readme = "README.rst"
license = "Apache-2.0 OR MIT"
authors = [
    { name = "UNICEF", email = "rapidpro@unicef.org" },
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "celery",
    "cryptography",
    "django",
    "django-admin-extra-buttons",
    "django-constance",
    "django-countries",
    "django-picklefield",
    "requests",
    "setuptools"  # temporary for python 3.12
]

[project.optional-dependencies]
test = [
    "black",
    "django-webtest",
    "factory-boy",
    "flake8",
    "httpretty",
    "isort",
    "mock",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-echo",
    "pytest-redis",
    "requests-mock",
    "unittest2",
    "vcrpy",
]

[project.urls]
Homepage = "https://github.com/unicef/unicef-business-areas"

[tool.hatch.version]
path = "src/unicef_realm/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["/src/unicef_realm"]

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | migrations
)/
'''
